--- a/final_rmd/ML_paper.Rmd
+++ b/final_rmd/ML_paper.Rmd
@@ -351,9 +351,8 @@ It is widely used in credit scoring to measure the separation of good vs bad cus
 They help to explore data and screen variables. 
 It is also used in marketing analytics project such as customer attrition model, campaign response model etc.
 
-* What is Weight of Evidence (WOE)?  
-The weight of evidence tells the predictive power of an independent variable in 
-relation to the dependent variable. 
+* the meaning of Weight of Evidence (WOE) 
+WOE is a form of encoding the original independent variable and the purpose of encoding the original independent variables is generally used to improve the prediction effect of the model and improve the intelligibility of the model. In addition to this, The premise of WOE encoding is advance grouping of specific variables.
 
 * Steps of Calculating WOE  
 1. For a continuous variable, split data into several parts.
@@ -380,7 +379,7 @@ Otherwise it is not easy to accomplish linear relationship using other transform
 methods such as log, square-root etc. In short, if you would not use WOE transformation,
 you may have to try out several transformation methods to achieve this.
 
-* What is Information Value (IV)?  
+* the meaning of Information Value (IV)
 Information value is one of the most useful technique to select important 
 variables in a predictive model. It helps to rank variables on the basis of their 
 importance.
@@ -648,8 +647,7 @@ dl_bin <- woebin(converted_data,
 
 Now we inspect the Binning variables.  
 
-The bart chart below illustrates how the variable is discretizated into categories.
-As for variable `CNT_CHILDREN` we notice that there are 3 categories, i.e. `[-inf, 1)`,`[1,2)`,`[2, inf)`(shown as horizontal axis). The color "`bad`" and "`good`" represent the sample with target variable(y) value "1" and "0". The height of each bar represents the sample proportion, whose target value is "`bad`"(1), to the whole sample (shown as right vertical axis "Bad probability") and the sample proportion of each category to the whole sample (shown as left vertical axis "Bin count distribution"). The numbers written at the top of each bar show the percentage of each category, i.e. 63.3%(15908) of samples are categorized to [-inf, 1), 24.3%(6118) of samples are categorized to [1, 2) and the rest 12.4% are categorized to [2, -inf) . The most important ratios, bad ratios, representing the proportion of "`bad`" samples to "`good`" samples in each category, are shown inside of the bar. We notice the bad ratios for categories are linear, which means this binning is good.
+The bart chart below illustrates the result of discretization for several continuous variable `CHT_CHILDREN`, this variable has been divided into 3 groups, i.e. `[-inf, 1)`,`[1,2)`,`[2, inf)`. The percentage of each groups is provided above each column. For example, 15908, which account for 63.3% of the total users, have been classified into the first group. In addtion to this, **#bad** and **#good** indicate the distribution of the number of risk users and normal users in these groups. The most important ratios, bad ratios, representing the proportion of "`bad`" users to "`good`" samples in each category, are shown inside of the bar. We notice the bad ratios for categories are linear, which means this binning is good.
 
 ```{r, message=FALSE, warning=FALSE, fig.height=4}
 # plot binning variable
@@ -667,7 +665,7 @@ plotlist[2]
 ```
   
 As for `DAYS_BIRTH` , we notice that it is discretizated into 7 categories, i.e.
-`[-inf, -19000]`,`[-19000, -175000]` etc.  and the bad ratios for categories are linear, which means 
+`[-inf, -19000]`,`[-19000, -175000]` etc.  and the bad ratios for categories is linear, which means 
 this binnning is good.
 ```{r, message=FALSE, warning=FALSE}
 # plot binning variable
@@ -743,27 +741,33 @@ When finishing with the nominal variable encoding process, there are 6 datasets 
 # Introduction to methods and metrices
 
 ## Logistic regression
-Logistic Regression is a Machine Learning classification algorithm that is used to predict the probability of a categorical dependent variable. In logistic regression, the dependent variable is a binary variable that contains data coded as 1 (yes, success, etc.) or 0 (no, failure, etc.). In other words, the logistic regression model predicts P(Y=1) as is shown in formular of X. 
+Logistic Regression is a Machine Learning classification algorithm that is used to predict the probability of a categorical dependent variable. In logistic regression, the dependent variable is a binary variable that contains data coded as 1 (yes, success, etc.) or 0 (no, failure, etc.). In other words, the logistic regression model predicts P(y=1) as is shown in formular of sample x and *$\beta$* is a vector of the logistic regression coefficients. 
 $$ P=(y=1|x,\beta) = \frac{1}{1+e^{-\beta^Tx}} $$  
+
 
 ## KNN  
 
 KNN (k-nearest neighbors) is a method used for classification. In simple words, to classify one specific data point, it takes k neighbors with the shortest distance. Furthermore, based on how the neighbors are classified, we will assign the new input to the most popular category in the k neighbors.  
 The **KNN** package included in **mlr3** has the following parameters: *k* (the number of neighbors considered), *distance* (Parameter of Minkowski distance), *kernel* (kernel functions used to weight the neighbors). Here the number of k and the method of calculating the distances between data points are crucial. We will first evaluate how KNN performs between different data, including different encoding, and different missing value handling. Then we will explore different methods to get better results. First, we investigate them separately and then combine the knowledge to perform further fine-tuning to improve the model.  
 
-## SVM  
+## SVM
 
-A Support Vector Machine (SVM) is a discriminative classifier formally defined by a separating hyperplane. In other words, given labeled training data (supervised learning), the algorithm outputs an optimal hyperplane which categorizes new examples. In two dimentional space this hyperplane is a line dividing a plane in two parts where in each class lay in either side.
+Support Vector Machine (SVM) is generally considered as a classification approach while it can be harnessed in both types of classification and regression related problems. The reason why we choose SVM as one of the training models regarding the credit card approval decision is that it is rather easy to handle multiple binary variables (e.g. `CODE_GENDER`), categorical variables (e.g. `OCCUPATION_TYPE`) and continuous variables (e.g. `AMT_INCOME_TOTAL`) with SVM. 
 
-Correspondingly, we will use the SVM algorithm embedded in the **mlr3** learner and analyze the prediction performances with AUC (Area under the ROC Curve) values. 
+To explain SVM further, there are three core elements included in SVM, which are support Vectors, hyperplane and margin. Support vectors are the data points, which are closest to the hyperplane. These points will define the separating line better by calculating the corresponding margins. These points are more relevant to the construction of the classifier. In addition, a hyperplane is a decision plane which can separate between a set of objects having different class memberships. Last but not least, a margin is a gap between the two lines on the closest class points. This is calculated as the perpendicular distance from the line to support vectors or closest points and the larger the margin is, the better the classification job is done with the dataset.
 
-When it comes to model tuning for SVM, we consider the *kernel* function, *cost* (also known as *C-Regularization* parameter) and *gamma* to tune.
+With regards to the purpose of classification, SVM would construct a hyperplane in multidimensional space intended to seperate for different classes. Afterwards, SVM will generate the optimal hyperplane in an iterative manner, that is used to minimize the classification error. In general, the core idea of this model is to find the maximum marginal hyperplane (MMH) which could best divide the whole dataset (data collected with potential customers who want to apply for the credit cards)into different classes, referred as our ultimate target variable y (0 and 1, meaning different approval group type) in this case.
 
-*kernels*: The main function of the kernel is to take low dimensional input space and transform it into a higher-dimensional space. It is mostly useful in non-linear separation problem.
+Correspondingly, we will use the SVM algorithm embedded in the mlr3 learner and analyze the prediction performances with AUC (Area under the ROC Curve) values regarding the approval decision about the issuance of credit card to make. 
 
-*cost (Regularisation)*: Cost is the penalty parameter, which represents misclassification or error term. The misclassification or error term tells the SVM optimisation how much error is bearable. This is how you can control the trade-off between decision boundary and misclassification term.
+Besides the basic model training with SVM with default parameter settings, we still need to tune the model further in order to get a better prediction performance, which is corresponeded to the AUC value, with the approval decision. When it comes to model tuning for SVM, we generally onsider the kernel function, cost (also known as C- Regularization parameter) and gamma to tune. (**reference**)
 
-*Gamma*: It defines how far influences the calculation of plausible line of separation.
+*Kernels*: A kernel is playing a role in transforming an input data space into the required form. SVM uses a technique called the kernel trick to take a low-dimensional input space and transforms it into a higher dimensional space. In other words, you can say that it converts nonseparable problem to separable problems by adding more dimension to it. It is most useful in non-linear separation problem. Kernel trick helps you to build a more accurate classifier and therefore can reduce the classification error.
+
+
+*Cost* (Regularisation): Cost is the penalty parameter, which represents misclassification or error term. The misclassification or error term tells the SVM optimisation how much error is bearable. This is how you can control the trade-off between decision boundary and misclassification term.
+
+*Gamma*: Gamma is a parameter, which ranges from 0 to 1. A higher value of gamma will perfectly fit the training dataset, which causes over-fitting. Gamma=0.1 is considered to be a good default value. The value of gamma needs to be manually specified in the learning algorithm.
 
 ## Random Forest  
 
@@ -1020,7 +1024,171 @@ Ultimately, after all these step-to-step tuning procedures, we can grab the best
 
 ### Data balancing 
 
-At first we define the smote PipeOps.
+**oversampling**  
+
+
+In mlr3pipelines, there is a **classbalancing** and a **smote** pipe operator that can be combined with any learner. 
+At first we use *oversampling* method to balance target variable. To do this, We define the classbalancing PipeOps by using the **po** function of **mlr3pipelines** package and set parameter as *classbalancing*. 
+```{r}
+# load library
+library(mlr3learners)
+library(mlr3tuning)
+library(mlr3pipelines)
+library(paradox)
+task <- TaskClassif$new("dl_iv", backend = dl_iv_data, target = "y")
+# logistic learner
+lg_learner <- lrn("classif.log_reg", predict_type = "prob")
+# po_smote = po("smote", dup_size = 6)
+po_over <- po("classbalancing",
+  id = "oversample", adjust = "minor",
+  reference = "minor", shuffle = FALSE, ratio = 6
+)
+# creat oversample
+lg_over_learner <- GraphLearner$new(po_over %>>% lg_learner, predict_type = "prob")
+```
+
+As for *classbalancing*, *oversample.ratio* is the hyperparamter we neet to configurate. For a better exploration of *oversample.ratio*, we set a large ranging from 10 to 70.
+
+```{r}
+#set parameter
+lg_over_param_set <- ParamSet$new(list(ParamDbl$new("oversample.ratio", lower = 10, upper = 70)))
+# reset term
+terms <- term("none")
+# set inner_rsmp
+inner_rsmp <- rsmp("cv", folds = 5L)
+#creat autotuner
+lg_over_auto <- AutoTuner$new(
+  learner = lg_over_learner, resampling = inner_rsmp,
+  measures = msr("classif.auc"), tune_ps = lg_over_param_set,
+  terminator = terms, tuner = tnr("grid_search", resolution = 12)
+)
+# set outer_resampling, and creat a design with it
+outer_rsmp <- rsmp("cv", folds = 3L)
+lg_over_design <- benchmark_grid(
+  tasks = task,
+  learners = lg_over_auto,
+  resamplings = outer_rsmp
+)
+```
+
+With *store_models = TRUE* we allow the benchmark function to store each single model that was computed during tuning. Therefore, we can plot the tuning path of the best learner from the subsampling iterations:
+
+```{r ,eval=FALSE,results='hide', message=FALSE, warning=FALSE}
+#set.seed
+set.seed(2020)
+#creat benchmark
+lg_over_bmr <- benchmark(lg_over_design, store_models = TRUE)
+#aggregate to get results of model
+lg_over_results <- lg_over_bmr$aggregate(measures = msr("classif.auc"))
+#inspect auc value.
+lg_over_results$classif.auc
+# lg_over_results = 0.7159998
+
+library(ggplot2)
+over_path1 <- lg_over_bmr$data$learner[[1]]$archive("params")
+over_gg1 <- ggplot(over_path1, aes(
+  x = oversample.ratio,
+  y = classif.auc
+)) +
+  geom_point(size = 3) +
+  geom_line() #+ theme(legend.position = "none")
+
+over_path2 <- lg_over_bmr$data$learner[[2]]$archive("params")
+over_gg2 <- ggplot(over_path2, aes(
+  x = oversample.ratio,
+  y = classif.auc
+)) +
+  geom_point(size = 3) +
+  geom_line() #+ theme(legend.position = "none")
+
+over_path3 <- lg_over_bmr$data$learner[[3]]$archive("params")
+over_gg3 <- ggplot(over_path3, aes(
+  x = oversample.ratio,
+  y = classif.auc
+)) +
+  geom_point(size = 3) +
+  geom_line() #+ theme(legend.position = "none")
+
+library(ggpubr)
+ggarrange(over_gg1, over_gg2, over_gg3, common.legend = TRUE, legend = "bottom")
+```
+
+```{r echo=FALSE,out.width = "100%", fig.pos="h"}
+knitr::include_graphics("./img/lg_over.png")
+```
+
+We can see from the plots above, logistic regression seems to get better performance when the value of *oversample.ratio* is round 20 and 40. We can not determine the final value of this hyperparameter. Otherwise, we proceed another search with ranging from 15 to 45 to find the best value of *oversample.ratio*. 
+ 
+```{r}
+#set parameter
+lg_over_param_set <- ParamSet$new(list(ParamDbl$new("oversample.ratio", lower = 5, upper = 45)))
+#creat autotuner
+lg_over_auto <- AutoTuner$new(
+  learner = lg_over_learner, resampling = inner_rsmp,
+  measures = msr("classif.auc"), tune_ps = lg_over_param_set,
+  terminator = terms, tuner = tnr("grid_search", resolution = 7)
+)
+# set outer_resampling, and creat a design with it
+outer_rsmp <- rsmp("cv", folds = 3L)
+lg_over_design <- benchmark_grid(
+  tasks = task,
+  learners = lg_over_auto,
+  resamplings = outer_rsmp
+)
+```
+
+```{r ,eval=FALSE,results='hide', message=FALSE, warning=FALSE}
+#set.seed
+set.seed(2020)
+#creat benchmark
+lg_over_bmr <- benchmark(lg_over_design, store_models = TRUE)
+#aggregate to get results of model
+lg_over_results <- lg_over_bmr$aggregate(measures = msr("classif.auc"))
+#inspect auc value.
+lg_over_results$classif.auc
+# lg_over_results = 0.7212002
+
+library(ggplot2)
+over_path1 <- lg_over_bmr$data$learner[[1]]$archive("params")
+over_gg1 <- ggplot(over_path1, aes(
+  x = oversample.ratio,
+  y = classif.auc
+)) +
+  geom_point(size = 3) +
+  geom_line() #+ theme(legend.position = "none")
+
+over_path2 <- lg_over_bmr$data$learner[[2]]$archive("params")
+over_gg2 <- ggplot(over_path2, aes(
+  x = oversample.ratio,
+  y = classif.auc
+)) +
+  geom_point(size = 3) +
+  geom_line() #+ theme(legend.position = "none")
+
+over_path3 <- lg_over_bmr$data$learner[[3]]$archive("params")
+over_gg3 <- ggplot(over_path3, aes(
+  x = oversample.ratio,
+  y = classif.auc
+)) +
+  geom_point(size = 3) +
+  geom_line() #+ theme(legend.position = "none")
+library(ggpubr)
+ggarrange(over_gg1, over_gg2, over_gg3, common.legend = TRUE, legend = "bottom")
+```
+
+```{r echo=FALSE,out.width = "100%", fig.pos="h"}
+knitr::include_graphics("./img/lg_over_2.png")
+```
+
+We noticed that two of three plots reach the best AUC value when the value of *oversample.ratio* is 30. Thus we choose the hyperparameter as 30. In conclusion, simple logistic regression achieves the best performance with AUC value 0.7236 when the value of *oversample.ratio* is 30. What is unexpected is that the AUC value of logistic regression does not increase but even slightly decreases after balancing target variable, from 0.7248 to 0.7212. It suggests that *oversampling* method may not be suitable for our dataset.
+
+Since there is no hyperparameter in *log_reg* method, we then use SMOTE method to balance target variable.
+We want to determine which method is suitable for our dataset.
+
+**SMOTE**
+
+We define the smote PipeOps by using the **po** function of **mlr3pipelines** package and set parameter as *smote*.
+
 ```{r}
 # load library
 library(mlr3learners)
@@ -1035,9 +1203,7 @@ po_smote <- po("smote", dup_size = 50)
 lg_smote_learner <- GraphLearner$new(po_smote %>>% lg_learner, predict_type = "prob")
 ```
 
-As for **smote**, we set hyperparamters *smote.K* ranging from 20 to 60 and  *smote.dup_size* ranging from 10 to 20.
-We define the search space in order to tune the hyperparameters of the class imbalance methods. 
-other configurations remain mentioned above.
+In *smote* method of **mlr3** package, there are 2 hyperparameters that need to be configured. Since our target variable is extremely imbalanced and with the results of rough experimentation, we set hyperparameters *smote.dup_size* ranging from 20 to 60 and *smote.K* ranging from 10 to 20.
 
 ```{r}
 lg_smote_param_set <- ParamSet$new(params = list(
@@ -1094,18 +1260,88 @@ over_gg3 <- ggplot(over_path3, aes(
 )) +
   geom_point(size = 3) +
   geom_line() #+ theme(legend.position = "none")
-
+library(ggpubr)
 ggarrange(over_gg1, over_gg2, over_gg3, common.legend = TRUE, legend = "bottom")
 ```
 
 ```{r echo=FALSE,out.width = "100%", fig.pos="h"}
-knitr::include_graphics("img/smote_lg.png")
+knitr::include_graphics("img/lg_smote.png")
 ```
 
-shown on the plots above, it is better to choose *smote.K* with value 
-40 and *smote.dup_size* with value 15 in order to show a considerably good prediction performance measured around **0.72**.  
-In comparison with defalut **dl_iv_data**, there is no significant increment. Thence,
-smote method seems not suitable for Logistic Regression.
+As shown on the plots above, the green line has the best performance on average, and two plots get the best performance at
+*smote.dup_size* equals 40. hence, it is better to choose *smote.K* with value 15. As for *smote.dup_size*, we will proceed another serach with ranging from 25 to 55 to obtain a considerably better prediction performance.
+
+```{r}
+po_smote <- po("smote", K = 15)
+# creat smote
+lg_smote_learner <- GraphLearner$new(po_smote %>>% lg_learner, predict_type = "prob")
+#set parameter
+lg_smote_param_set <- ParamSet$new(params = list(
+  ParamInt$new("smote.dup_size", lower = 25, upper = 50)
+))
+# set outer_resampling, and creat a design with it
+lg_smote_auto <- AutoTuner$new(
+  learner = lg_smote_learner, resampling = inner_rsmp,
+  measures = msr("classif.auc"), tune_ps = lg_smote_param_set,
+  terminator = terms, tuner = tnr("grid_search", resolution = 5)
+)
+
+# set outer_resampling, and creat a design with it
+outer_rsmp <- rsmp("cv", folds = 3L)
+lg_smote_design <- benchmark_grid(
+  tasks = task,
+  learners = lg_smote_auto,
+  resamplings = outer_rsmp
+)
+```
+
+
+```{r, eval=FALSE ,results='hide', message=FALSE, warning=FALSE}
+set.seed(2020)
+# run benchmark
+lg_smote_bmr <- benchmark(lg_smote_design, store_models = TRUE)
+lg_smote_results <- lg_smote_bmr$aggregate(measures = msr("classif.auc"))
+lg_smote_results$classif.auc
+#0.7253
+# plot path
+over_path1 <- lg_smote_bmr$data$learner[[1]]$archive("params")
+over_gg1 <- ggplot(over_path1, aes(
+  x = smote.dup_size,
+  y = classif.auc, col = factor(smote.K)
+)) +
+  geom_point(size = 3) +
+  geom_line() #+ theme(legend.position = "none")
+
+over_path2 <- lg_smote_bmr$data$learner[[2]]$archive("params")
+over_gg2 <- ggplot(over_path2, aes(
+  x = smote.dup_size,
+  y = classif.auc, col = factor(smote.K)
+)) +
+  geom_point(size = 3) +
+  geom_line() #+ theme(legend.position = "none")
+
+over_path3 <- lg_smote_bmr$data$learner[[3]]$archive("params")
+over_gg3 <- ggplot(over_path3, aes(
+  x = smote.dup_size,
+  y = classif.auc, col = factor(smote.K)
+)) +
+  geom_point(size = 3) +
+  geom_line() #+ theme(legend.position = "none")
+
+library(ggpubr)
+ggarrange(over_gg1, over_gg2, over_gg3, common.legend = TRUE, legend = "bottom")
+```
+
+```{r echo=FALSE,out.width = "100%", fig.pos="h"}
+knitr::include_graphics("img/lg_smote_2.png")
+```
+
+Shown on the plots above, we have noticed that two of three plots suggest the best value of *smote.dup_size* is 31.
+Thus we finaly choose the value of *smote.dup_size* as 31.
+
+we have managed to reach our best prediction performance with AUC value fixed at 0.7253 which shows the improvement of 0.0005 in comparison with the performance of default logistic regression model with value 0.7248. 
+
+After using two different method to balance target variable, the prediction performance of logistic regression model does not obtain a significant improvement and it is noteworthy that *oversampling* even decreases the model performance, this suggests that *oversampling* method may not be suitable for our dataset.
 
 ## KNN  
 
